--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /lib/l10n/arb/app_en.arb
-    translation: /lib/l10n/arb/app_%two_letters_code%.arb
+    translation: /lib/l10n/arb/app_%locale_with_underscore%.arb
