--- a/pubspec_ios.yaml
+++ b/pubspec_ios.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Material Expressive 3 / Dynamic Color
   dynamic_color: ^1.7.0
   material_color_utilities: ^0.11.1
+  palette_generator: ^0.3.3+4
 
   # Permissions
   permission_handler: ^12.0.1
